[gd_scene load_steps=31 format=3 uid="uid://bxacqh1cbwxw5"]

[ext_resource type="Script" path="res://Scripts/UX and UI/GlobalHUDManager.gd" id="1_u1olj"]
[ext_resource type="Texture2D" uid="uid://cp6xuvmo0rguj" path="res://Art/ui/HUD/UI_BlackBorder.png" id="1_vcacc"]
[ext_resource type="Script" path="res://Scripts/LightManager.gd" id="2_01nkd"]
[ext_resource type="Texture2D" uid="uid://c2dvodr38hdfp" path="res://Art/ui/HUD/UI_LightBar_dark2.png" id="3_ncwr2"]
[ext_resource type="Texture2D" uid="uid://5k8n46gs2ghw" path="res://Art/ui/HUD/UI_LightBar_frame2.png" id="4_k2bwc"]
[ext_resource type="Texture2D" uid="uid://woyu5th1dweb" path="res://Art/ui/HUD/UI_LightBar_light2.png" id="5_5ophj"]
[ext_resource type="Texture2D" uid="uid://c2fj0vknmdoys" path="res://Art/ui/Shop/money_symbol.png" id="6_3yotd"]
[ext_resource type="FontFile" uid="uid://bvh0dsp2kmrr0" path="res://Resources/Fonts/m5x7.ttf" id="7_pre4c"]
[ext_resource type="Script" path="res://Scripts/HealthUIHandler.gd" id="9_uhcmx"]
[ext_resource type="Resource" uid="uid://dd3l8ir1bmcm5" path="res://Resources/purchasable_health.tres" id="10_3kqti"]
[ext_resource type="Script" path="res://Scripts/inventory_handler.gd" id="11_qie2v"]
[ext_resource type="Texture2D" uid="uid://un5elq1p64iv" path="res://Art/ui/HUD/ui_slotLeftSide.png" id="12_5vff0"]
[ext_resource type="Resource" uid="uid://b26ws3o4u42p3" path="res://Resources/purchasable_inventory.tres" id="12_mfl1u"]
[ext_resource type="Script" path="res://Scenes/Playable Scenes/ui_death.gd" id="13_1fwbs"]
[ext_resource type="Texture2D" uid="uid://bw25xygruk6rd" path="res://Art/ui/HUD/ui_slotRightSide.png" id="13_tqnnv"]
[ext_resource type="Texture2D" uid="uid://bntebnpau35mm" path="res://Art/ui/UI_Death_background.png" id="14_0gadq"]
[ext_resource type="Theme" uid="uid://bfr5y4lo7m1ux" path="res://Resources/Fonts/fontTheme.tres" id="15_nxi4s"]
[ext_resource type="PackedScene" uid="uid://v1t8rfk5hqfa" path="res://Scenes/UI/button.tscn" id="16_281dp"]
[ext_resource type="Texture2D" uid="uid://bpa8olbvx4ufv" path="res://Art/ui/MainMenu/DrillBird_LOGO.png" id="19_hr1yg"]
[ext_resource type="Script" path="res://Scripts/UX and UI/main_menu.gd" id="19_qssi7"]
[ext_resource type="Script" path="res://Scripts/Abstract scripts/abstract_debugMenuOption.gd" id="20_hlahx"]

[sub_resource type="ImageTexture" id="ImageTexture_ese10"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ug5x"]
texture = ExtResource("4_k2bwc")
texture_margin_left = 2.0
texture_margin_top = 16.0
texture_margin_right = 2.0
expand_margin_left = 2.0
expand_margin_right = 2.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7j3f5"]
texture = ExtResource("5_5ophj")
texture_margin_left = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
expand_margin_left = 2.0
expand_margin_right = 2.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Curve" id="Curve_tlv4u"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.831395, 0.626374), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_c1j2j"]
curve = SubResource("Curve_tlv4u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_44yp2"]
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(3, 1, 1)
angle_min = -242.3
angle_max = 207.7
direction = Vector3(0, -1, 0)
spread = 46.8
initial_velocity_max = 52.89
gravity = Vector3(0, 90, 0)
scale_curve = SubResource("CurveTexture_c1j2j")
hue_variation_min = -0.89
hue_variation_max = -0.77

[sub_resource type="Theme" id="Theme_ush66"]
default_font = ExtResource("7_pre4c")
default_font_size = 16

[sub_resource type="Resource" id="Resource_jrvhg"]
script = ExtResource("20_hlahx")
name = "New Game"
options = Array[ExtResource("20_hlahx")]([])
isAction = true

[sub_resource type="Resource" id="Resource_q3x01"]
script = ExtResource("20_hlahx")
name = "Options"
options = Array[ExtResource("20_hlahx")]([])
isAction = true

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_u1olj")

[node name="topUI" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(160, 8)
scale = Vector2(1.25, 1)
texture = ExtResource("1_vcacc")

[node name="LightHandler" type="Node2D" parent="topUI"]
position = Vector2(3.90244, 1)
scale = Vector2(0.780488, 1)
script = ExtResource("2_01nkd")
time_DrillMultiplier = 3.0

[node name="LightSliderParent" type="Node2D" parent="topUI/LightHandler"]

[node name="lightbar_dark" type="Sprite2D" parent="topUI/LightHandler/LightSliderParent"]
z_index = 2
position = Vector2(6, -1)
texture = ExtResource("3_ncwr2")

[node name="UI_LightSlider" type="HSlider" parent="topUI/LightHandler/LightSliderParent"]
z_index = 3
offset_top = -9.0
offset_right = 12.475
offset_bottom = 7.0
mouse_force_pass_scroll_events = false
theme_override_icons/grabber_disabled = SubResource("ImageTexture_ese10")
theme_override_styles/slider = SubResource("StyleBoxTexture_4ug5x")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_7j3f5")
value = 100.0
editable = false

[node name="Particle_DrillLight" type="GPUParticles2D" parent="topUI/LightHandler/LightSliderParent"]
z_index = 2
position = Vector2(13, 3)
rotation = 1.5708
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_44yp2")
lifetime = 0.3
explosiveness = 0.26
randomness = 1.0

[node name="CashHolder" type="Node2D" parent="topUI"]
z_index = 2
position = Vector2(125.659, -8)
scale = Vector2(0.780488, 1)

[node name="cash symbol" type="Sprite2D" parent="topUI/CashHolder"]
visible = false
z_index = 2
position = Vector2(-7, 8)
texture = ExtResource("6_3yotd")

[node name="cashNumber" type="Label" parent="topUI/CashHolder"]
z_index = 2
layout_direction = 2
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.485
offset_right = -10.84
offset_bottom = 13.91
grow_horizontal = 0
theme = SubResource("Theme_ush66")
text = "0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="HealthUIHandler" type="Node2D" parent="topUI"]
z_index = 2
position = Vector2(-118.634, 0)
scale = Vector2(0.780488, 1)
script = ExtResource("9_uhcmx")
HealthUpgrades = ExtResource("10_3kqti")

[node name="bottomUI" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(161.999, 209)
scale = Vector2(1.32812, 1)
texture = ExtResource("1_vcacc")

[node name="bottomUI2" type="Sprite2D" parent="bottomUI"]
z_index = 2
position = Vector2(-1.12942, 16)
scale = Vector2(0.997063, 1)
texture = ExtResource("1_vcacc")

[node name="InventoryHandler" type="Node2D" parent="bottomUI"]
z_index = 2
position = Vector2(2.25883, 16)
scale = Vector2(0.752944, 1)
script = ExtResource("11_qie2v")
upgradetree_inventory = ExtResource("12_mfl1u")

[node name="ui_leftSide" type="Sprite2D" parent="bottomUI/InventoryHandler"]
visible = false
z_index = 2
position = Vector2(-33, -8)
texture = ExtResource("12_5vff0")

[node name="ui_rightSide" type="Sprite2D" parent="bottomUI/InventoryHandler"]
visible = false
z_index = 2
position = Vector2(31, -8)
texture = ExtResource("13_tqnnv")

[node name="UI_Death" type="Node2D" parent="."]
visible = false
position = Vector2(161, 88)
script = ExtResource("13_1fwbs")

[node name="Background" type="Sprite2D" parent="UI_Death"]
position = Vector2(7.62939e-06, 0)
scale = Vector2(1.24615, 1)
texture = ExtResource("14_0gadq")

[node name="header" type="Label" parent="UI_Death"]
offset_left = -128.0
offset_top = -36.0
offset_right = 128.0
offset_bottom = -10.0
size_flags_horizontal = 0
theme = ExtResource("15_nxi4s")
theme_override_colors/font_color = Color(0.92549, 0.862745, 0.443137, 1)
theme_override_font_sizes/font_size = 32
text = "Birdy died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="header2" type="Label" parent="UI_Death"]
offset_left = -101.0
offset_top = -7.0
offset_right = 107.0
offset_bottom = 22.0
size_flags_horizontal = 0
theme = ExtResource("15_nxi4s")
theme_override_colors/font_color = Color(0.670588, 0.447059, 0.341176, 1)
text = "- All ores were dropped
- Birdy will respawn at Home next day"
vertical_alignment = 1

[node name="Button_Continue" parent="UI_Death" instance=ExtResource("16_281dp")]

[node name="MainMenu" type="Node2D" parent="."]
position = Vector2(165, 129)
script = ExtResource("19_qssi7")
options = Array[ExtResource("20_hlahx")]([SubResource("Resource_jrvhg"), SubResource("Resource_q3x01")])

[node name="Logo" type="Sprite2D" parent="MainMenu"]
position = Vector2(0, -63)
scale = Vector2(0.186497, 0.186497)
texture = ExtResource("19_hr1yg")

[node name="mainMenuText" type="RichTextLabel" parent="MainMenu"]
clip_contents = false
offset_left = -46.0
offset_top = -11.0
offset_right = 47.0
offset_bottom = 29.0
theme = ExtResource("15_nxi4s")
bbcode_enabled = true
text = "[center]> Continue <
New Game
Options"
scroll_active = false

[connection signal="NewGame" from="MainMenu" to="." method="_on_main_menu_new_game"]
